[metadata]
version = 0.0.1
license = GPL-v3
license_file = LICENSE
author = Guillaume W. Bres
author_email = guillaume.bressaix@gmail.com
description = Analog Devices AD9547,AD9548 clock synth management tools
url = https://github.com/gwbres/adi-ad9548
python_requires = >= 3.6

[egg_info]
tag_date = 0
